# SentimentAgent

./: Apache-2.0 license  DEPENDENCIES.md  LICENSE  README.md  dependencies_license.md  pyproject.toml  requirements.txt
examples/: texts2problems_by_team.ipynb
examples/simulated_data_by_llm/: domain_酒店_question_type_居住质量.txt
sentiment_agent/: __init__.py  conclusion_summary.py  multi_agent_team.py  sentiment_analysis.py  text_classification.py  text_pre_classification.py  text_summary.py  utils.py
sentiment_agent/stop_words/: stop_words.txt
